[tool.poetry]
name = "jtt"
version = "0.1.0"
description = "a JailTracker tracker"
authors = ["eenblam <eenblam@riseup.net>"]
license = "See license.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
openai = "^1.35.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
